# SweetStarAnimMaker

./: .editorconfig  .gitignore  README.md  install-windows.bat  install-windows.ps1  package.json  playwright-project-detail-snapshot.md  pnpm-lock.yaml  pnpm-workspace.yaml  run-sweetstar.bat  seedance_prompt_guide.md  start-backend.bat  start-frontend.bat  stop-all.bat
apps/api/: package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/studio/: index.html  package.json  vite.config.ts
apps/worker/: package.json
docs/guide/: Production-Prompt-Guide.md  Prompt-Template-Guide.md  Seedance-Provider-Guide.md  Seedance-ShortDrama-Video-Guide.md  Seedance-Workflow-Code-Guide.md  VectorEngine-ChatGPT-Guide.md  VectorEngine-Gemini-Guide.md  VectorEngine-Grok-Provider-Guide.md  VectorEngine-Image-Guide.md  VectorEngine-Kling-Omni-Guide.md  VectorEngine-Kling-Video-Guide.md  VectorEngine-Sora-Video-Guide.md  VectorEngine-Wan-Video-Guide.md  Video-Prompt-Generation-Guide.md  单集短剧提示词.md
docs/memo/: 2026-04-18-video-prompt-generation-status-handoff.md  2026-04-19-regenerate-video-prompt-current-batch-guard-handoff.md  2026-04-19-review-finding-1-video-generation-success-status-handoff.md  (+7 more)
prompt-templates/: character_sheet.prompt.generate.txt  character_sheet.turnaround.generate.txt  master_plot.generate.txt  scene_sheet.generate.txt  segment_frame.plan.generate.txt  segment_video.generate.txt  shot_script.generate.txt  shot_script.segment.generate.txt  storyboard.generate.txt
(+216 files in other folders)
