[package]
name = "sweet-star-desktop"
version = "0.1.0"
description = "SweetStarAnimMaker desktop shell"
authors = ["SweetStar"]
edition = "2021"

[lib]
name = "sweet_star_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sweet-star-anim-maker-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
